# umbra

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  LICENSES.txt  TODO.txt  UR3.cbp  Umbra.cbp  copyright.txt  makefile-linux  makefile-mingw  pspad.ppr  readme.html  todo.html  vcpkg.json
.github/workflows/: cmake.yml
data/cfg/: config.txt  module.txt  umbra.txt
doc/: readme.html
nbproject/: Makefile-Windows-Debug-Demo.mk  Makefile-Windows-Debug-FOV.mk  Makefile-Windows-Debug-Invaders.mk  Makefile-Windows-Release-Demo.mk  Makefile-Windows-Release-FOV.mk  Makefile-Windows-Release-Invaders.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Windows-Debug-Demo.bash  Package-Windows-Debug-FOV.bash  Package-Windows-Debug-Invaders.bash  Package-Windows-Release-Demo.bash  Package-Windows-Release-FOV.bash  Package-Windows-Release-Invaders.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: main.cpp  main.hpp  version.hpp
src/demo/: CMakeLists.txt  circle.cpp  circle.hpp  credits.cpp  credits.hpp  demo.cpp  demo.hpp  globals.hpp  main.cpp  main.hpp  matrix.cpp  matrix.hpp  panel.cpp  panel.hpp  rabbit.cpp  rabbit.hpp  speed.cpp  speed.hpp
src/fov/: bsp_helper.cpp  fov.cpp  fov.hpp  fov_results.cpp  fov_results.hpp  fov_setup.cpp  fov_setup.hpp  fov_test.cpp  fov_test.hpp  main.cpp  main.hpp
src/invaders/: entities.cpp  entities.hpp  gameview.cpp  gameview.hpp  main.cpp  main.hpp  notification.cpp  notification.hpp  utilities.cpp  utilities.hpp
src/mod/: credits.cpp  credits.hpp  demo.cpp  demo.hpp
src/umbra/: callback.cpp  callback.hpp  callback_fwd.hpp  circle.hpp  config.cpp  config.hpp  delegate.hpp  engine.cpp  engine.hpp  engine_fwd.hpp  error.cpp  error.hpp  events.hpp  font.cpp  font.hpp  imod_bsod.cpp  imod_bsod.hpp  imod_credits.cpp  imod_credits.hpp  imod_msg.cpp  imod_msg.hpp  imod_speed.cpp  imod_speed.hpp  key.hpp  log.cpp  log.hpp  module.cpp  module.hpp  module_factory.hpp  point.hpp  rect.hpp  signal.hpp  stylesheet.cpp  stylesheet.hpp  umbra.hpp  umbra_callback.cpp  umbra_circle.hpp  umbra_config.cpp  umbra_config.hpp  umbra_delegate.hpp  (+31 more)
